--- a/app/src/main/res/xml/main_fragment_scene.xml
+++ b/app/src/main/res/xml/main_fragment_scene.xml
@@ -7,7 +7,7 @@
 
             <CustomAttribute
                 app:attributeName="backgroundColor"
-                app:customColorValue="#FFFFFF" />
+                app:customColorValue="#F7F6F5" />
         </Constraint>
 
         <Constraint
