--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,6 +5,7 @@
     android:id="@+id/mlMfRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f7f6f5"
     app:layoutDescription="@xml/main_fragment_scene"
     tools:context=".ui.main.MainFragment">
 
@@ -12,6 +13,7 @@
         android:id="@+id/viewMfToolbarBackground"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:background="#f7f6f5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -65,13 +67,13 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:hint="@string/search"
-                android:maxLines="1"
-                android:singleLine="true"
                 android:inputType="text"
+                android:maxLines="1"
                 android:paddingStart="16dp"
                 android:paddingTop="12dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="12dp"
+                android:singleLine="true"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +117,9 @@
         android:id="@+id/rvMfSearchResults"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:clipToPadding="false"
+        android:paddingBottom="54dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
